tests/ui/mismatched_types.stderr
error[E0308]: mismatched types
  --> tests/ui/mismatched_types.rs:15:19
   |
14 | #[distributed_slice(BENCHMARKS)]
   | -------------------------------- arguments to this function are incorrect
15 | static BENCH_WTF: usize = 999;
   |                   ^^^^^ expected fn pointer, found `usize`
   |
   = note: expected fn pointer `fn() -> &'static for<'a> fn(&'a mut Bencher)`
              found fn pointer `fn() -> &'static usize`
note: method defined here
  --> src/distributed_slice.rs
   |
   |     pub unsafe fn private_typecheck(self, get: fn() -> &'static T) {
   |                   ^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/mismatched_types.rs:18:20
   |
17 | #[disjointed_static(DEFAULT_CONFIG)]
   | ------------------------------------ arguments to this function are incorrect
18 | static CONFIG_WTF: usize = 999;
   |                    ^^^^^ expected `Config`, found `usize`
   |
   = note: expected fn pointer `fn() -> &'static Config`
              found fn pointer `fn() -> &'static usize`
note: method defined here
  --> src/disjointed_static.rs
   |
   |     pub const fn private_typecheck(self, get: fn() -> &'static T) {
   |                  ^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui/mismatched_types.rs:21:1
   |
20 | #[distributed_slice(BENCHMARKS)]
   | -------------------------------- arguments to this function are incorrect
21 | fn wrong_bench_fn<'a>(_: &'a mut ()) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Bencher`, found `()`
   |
   = note: expected fn pointer `fn() -> &'static for<'a> fn(&'a mut Bencher)`
              found fn pointer `fn() -> &'static for<'a> fn(&'a mut ())`
note: method defined here
  --> src/distributed_slice.rs
   |
   |     pub unsafe fn private_typecheck(self, get: fn() -> &'static T) {
   |                   ^^^^^^^^^^^^^^^^^
